<resources>
    <string name="label_menu">Menu</string>
    <string name="label_orders">Orders</string>
    <string name="label_cart">Carts</string>
    <string name="label_logout">Sign out</string>

    <string name="app_name">AndroidEatIt</string>
    <string name="slogan">No matter where you are, you always need some partner that make you feel better and you be better</string>
    <string name="SignUp">SignUp</string>
    <string name="SignIn">Sign In</string>
    <string name="hint_phone">Phone hint</string>
    <string name="hint_password">Password hint</string>
    <string name="hint_name">Name hint</string>
    <string name="name">Tom Cruiser</string>
    <string name="phone_number">0988132345</string>
    <string name="person_password">sdfser</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
