<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sake_480x400"
    tools:context="io.github.joseseie.androideatit.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo2" />
        
        <TextView
            android:gravity="center"
            android:id="@+id/txtSlogan"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:text="@string/slogan"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/SignUp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@android:color/black"
            android:layout_margin="5dp"
            android:background="@color/btnSignUp"
            />
        <!--Procurar este tipo de botao-->
        <!--info.hoang8f.widget.FButton-->

        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/SignIn"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@android:color/black"
            android:background="@color/btnSignActive"
            />
    </LinearLayout>

</RelativeLayout>
